# jsoncli

./: .dockerignore  .gitignore  Dockerfile  Patient-ex-patient.json  README.md  pyproject.toml  sample.json
.github/workflows/: ci.yml
jcli/: __init__.py  app.py  cli.py  formatting.py  render.py
jsonbonsai/: __init__.py  app.py  cli.py
jsoncli/: __init__.py  app.py  cli.py
tests/: test_jcli.py  test_jsonbonsai.py  test_jsoncli.py
