[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jcli"
version = "0.1.0"
description = "Turn any JSON file into a beautiful, collapsible, bracket-free tree in your terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "jcli" }]
keywords = ["json", "cli", "tui", "viewer", "tree", "textual"]
dependencies = [
    "textual>=0.60",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
jcli = "jcli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jcli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
