[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jsonbonsai"
version = "0.1.0"
description = "Turn any JSON file into a beautiful, collapsible, bracket-free tree in your terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahnaf Rahman" }]
keywords = ["json", "cli", "tui", "viewer", "tree", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "textual>=0.60",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/Arahman0115/jsonbonsai"
Repository = "https://github.com/Arahman0115/jsonbonsai"
Issues = "https://github.com/Arahman0115/jsonbonsai/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
jsonbonsai = "jsonbonsai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jsonbonsai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
